# top

./: CMakeLists.txt
include/: types.h
include/stencil/: mesh.h
resultat/: resultat_v1_100x100x100.txt  resultat_v2_100x100x100.txt  resultat_v3_100x100x100.txt  resultat_v4_100x100x100.txt
scripts/: compare.py
src/: CMakeLists.txt  main.c
src/stencil/: comm_handler.c  config.c  init.c  mesh.c  solve.c
